--- a/website/src/style/index.css
+++ b/website/src/style/index.css
@@ -1,3 +1,12 @@
+.material-symbols--download {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%234382dd' d='m12 16l-5-5l1.4-1.45l2.6 2.6V4h2v8.15l2.6-2.6L17 11zm-6 4q-.825 0-1.412-.587T4 18v-3h2v3h12v-3h2v3q0 .825-.587 1.413T18 20z'/%3E%3C/svg%3E");
+  }
+
 /* 页面整体布局 */
 .canvas-container {
     display: flex;
@@ -23,7 +32,7 @@
   
   /* 右侧操作区域 */
   .sidebar {
-    width: 250px;
+    width: 350px;
     padding: 20px;
     margin-left: 20px;
     background-color: #f9fafb;
